# infamousC-

./: CMakeLists.txt  README.md  compile_commands.json  shell.nix
src/: main.cpp
src/basics/: basics.cpp  basics.h  random.cpp  random.h
src/bitman/: bitman.cpp  bitman.h
src/classes/: classes.cpp  classes.h
src/structsy/: struct00.h  structsy_utils.cpp  structsy_utils.h
